Initial frontend deployment - Removed Supabase dependencies and prepared for Vercel deployment

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
+# Dependencies
+node_modules/
+*/node_modules/
+
+# Build outputs
+dist/
+dist-ssr/
+build/
+.vite/
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+*.local
+
 # Logs
 logs
 *.log
@@ -7,18 +25,24 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# OS files
 .DS_Store
+Thumbs.db
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# IDE files
+.vscode/*
+!.vscode/extensions.json
+.idea/
+
+# Backend folders (exclude from frontend repo)
+backend/
+backend-only/
+supabase/
+
+# Frontend duplicate folder
+frontend/
