--- a/.github/workflows/main_adoptafarmer.yml
+++ b/.github/workflows/main_adoptafarmer.yml
@@ -33,7 +33,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          # Upload only the production build output so Azure Web App serves static files
+          path: dist
 
   deploy:
     runs-on: ubuntu-latest
@@ -47,6 +48,8 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: node-app
+          # extract files into ./dist so the deploy action can target the dist folder
+          path: dist
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -61,5 +64,6 @@ jobs:
         with:
           app-name: 'adoptafarmer'
           slot-name: 'Production'
-          package: .
+          # Deploy the static site build output
+          package: ./dist
           
