--- a/.github/workflows/main_adoptafarmer.yml
+++ b/.github/workflows/main_adoptafarmer.yml
@@ -71,16 +71,7 @@ jobs:
           package: .
       
       - name: Set startup command
-        uses: azure/appservice-settings@v1
-        with:
-          app-name: 'adoptafarmer'
-          slot-name: 'Production'
-          app-settings-json: |
-            [
-              {
-                "name": "SCM_DO_BUILD_DURING_DEPLOYMENT",
-                "value": "false"
-              }
-            ]
-          startup-command: 'node server.js'
+        run: |
+          az webapp config set --name adoptafarmer --resource-group adoptafarmer_group --startup-file "node server.js"
+          az webapp config appsettings set --name adoptafarmer --resource-group adoptafarmer_group --settings SCM_DO_BUILD_DURING_DEPLOYMENT=false
           
